# ledger_app_challenge

./: .dockerignore  .gitignore  CLAUDE.md  README.md  REQUIREMENT.md  package-lock.json
api/: .env.example  Cargo.toml
api/src/: broadcaster.rs  clock.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  models.rs  openapi.rs  response.rs  router.rs  state.rs
api/src/handlers/: mod.rs
api/src/handlers/auth/: post.rs  requests.rs  responses.rs
api/src/handlers/feed/: get.rs  mod.rs  responses.rs  stream.rs
api/src/handlers/transfers/: mod.rs  post.rs  requests.rs  responses.rs
api/src/handlers/users/: get.rs  mod.rs  responses.rs
api/src/middlewares/: authentication.rs  correlation_id.rs  idempotency.rs  mod.rs
api/src/repositories/: currencies.rs  entities.rs  idempotency.rs  mod.rs  sessions.rs  transfers.rs  users.rs
api/src/services/: auth.rs  currencies.rs  feed.rs  idempotency.rs  mod.rs  transfers.rs  users.rs
api/tests/: concurrent_transfer.rs  idempotency.rs  multi_recipient.rs  session_lifecycle.rs
api/tests/common/: mod.rs
infra/: api.Dockerfile  docker-compose.yml  web.Dockerfile
infra/grafana/provisioning/dashboards/: dashboards.yml  request-trace.json
infra/loki/: config.yml
infra/promtail/: config.yml
infra/scripts/: seed.sh
migrations/: 20260629000001_initial_schema.sql  20260629000002_stored_procedures.sql  20260629000003_multi_recipient_transfers.sql
web/: package-lock.json  package.json  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/app/home/: page.tsx
web/app/login/: page.tsx
web/lib/: api.ts  feedStream.ts  recentTransfers.ts
