[package]
name = "ledger-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ledger-api"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
axum-extra = { version = "0.12.6", features = ["cookie", "typed-header"] }
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
chrono = { version = "0.4.45", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["env-filter", "fmt", "registry", "tracing-log", "smallvec", "std"] }
async-trait = "0.1.89"
thiserror = "2.0.18"
anyhow = "1.0.103"
argon2 = "0.5.3"
base64 = "0.22.1"
validator = { version = "0.20.0", features = ["derive"] }
utoipa = { version = "5.5.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
futures = "0.3.32"
dashmap = "6.2.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
time = "0.3.51"
config = { version = "0.15.25", default-features = false }
dotenvy = "0.15.7"
rust_decimal = { version = "1.36.0", features = ["serde-with-str"] }

[dev-dependencies]
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "cookies"] }
serial_test = "3.5.0"
